THRIFT-1036 Auto-generated C++ code fails to compile with "-Werror -Wextra -Wall" g++ compiler flags Patch: Pavlin Radoslavov

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1062352 13f79535-47bb-0310-9956-ffa450edef68